feat: User dashboard with viewing parties they were invited to and hosting with movie details

--- a/app/views/users/movie_details.html.erb
+++ b/app/views/users/movie_details.html.erb
@@ -22,6 +22,6 @@
 
   <% @reviews[:author_info].each do |author| %>
     <p>Name: <%= author[0] %></p>
-    <p>Rating: <%= author[1][:rating].round(2) %></p>
+    <p>Rating: <%= author[1][:rating] %></p>
   <% end %>
 </section>
