--- a/app/views/users/viewing_parties/new.html.erb
+++ b/app/views/users/viewing_parties/new.html.erb
@@ -2,7 +2,7 @@
 
 <body>
   <center><table>
-    <%= form_with url: "/users/#{@user.id}movies/#{@movie.id}/viewing_parties/new", method: :post, local: true do |f| %>
+    <%= form_with url: "/users/#{@user.id}movies/#{@movie.movie_id}/viewing_parties/new", method: :post, local: true do |f| %>
     <tr>
         <center><td> <%= f.label :header, "Viewing Party Details" %></td></center>
     </tr>
@@ -23,21 +23,13 @@
     </tr>
     <tr>
       <td> <%= f.label :time, "Duration of Party" %> </td>
-      <td> <%= f.number_field :, value: @movie.runtime %> </td>
+      <td> <%= f.number_field :time, value: @movie.runtime %> </td>
     </tr>
-    <tr>
-      <td> 
-        <td><%= f.label :check_boxes, "Invite Other Users" %></td><br>
-        <td><%= f.collection_check_boxes(:user_ids, @users, :id, :name_with_email) %></td>
-      <tr>
-      <%= f.hidden_field :host_id, value: @user.id %>
-      <%= f.hidden_field :movie_id, value: @movie.id %>
+        <%= f.hidden_field :host_id, value: @user.id %>
+        <%= f.hidden_field :movie_id, value: @movie.movie_id %>
+        <%= f.hidden_field :movie_id, value: @movie.movie_id %>
         <td><%= f.submit "Create Party" %></td>
-      <% end %></td>
+    <% end %></td>
     </tr>
-    <tr>
-      <td> <%= f.submit "Create New User" %> </td>
-    </tr>
-    <% end %>
   </table> </center>
 </body>
