--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
-<h1><%=@user.name%>'s Dashboard</h1>
+<h1><%=@facade.user.name%>'s Dashboard</h1>
 <br>
-<%=button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get%>
+<%=button_to "Discover Movies", "/users/#{@facade.user.id}/discover", method: :get%>
 <br>
 <h3>Viewing Parties</h3>
 <div id="viewing-parties">
-  <%@user.viewing_parties.each do |party|%>
+  <%@facade.user.viewing_parties.each do |party|%>
   <div id="party-<%= party.id%>">
-    <p>Movie Poster:<%= image_tag (party.movie_poster)%> </p>
+    <p>Movie Poster: </p>
     <p>Movie Title</p>
-    <p>Date: <%=party.party_date%></p>
+    <p>Date: <%=party.party_date %> </p> 
     <p>Starting At: <%=party.start_time.strftime("%l:%M%P")%></p>
     <br>
   </div>
