add: bootstrap and styling

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,6 @@
-<p><%= button_to "Create Viewing Party", new_user_movie_party_path(@user, @movie.id), params: {title: @movie.title, runtime: @movie.runtime, image_path: @movie.image}, method: :get %></p>
+<p><%= button_to "Create Viewing Party", new_user_movie_party_path(@user, @movie.id), params: {title: @movie.title, runtime: @movie.runtime, image_path: @movie.image}, class: "btn btn-outline-primary", method: :get %></p>
 
-<p><%= button_to "Return to Discover Page", user_discover_index_path(@user), method: :get %></p>
+<p><%= button_to "Return to Discover Page", user_discover_index_path(@user), class: "btn btn-outline-info", method: :get %></p>
 
 <h3><%= @movie.title %></h3>
   <p>Vote Average: <%= @movie.vote_average %></p>
