--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,5 @@
 	<%= f.text_field :name %>
 	<%= f.label :email, "Email" %>
 	<%= f.email_field :email %>
-	<%= f.submit "Register" %>
+	<%= f.submit "Register", class: "btn btn-success"%>
 <% end %>
