--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,7 +1,7 @@
-<%= button_to "Discover Top Rated Movies", user_movies_path(@user), method: :get %>
+<%= button_to "Discover Top Rated Movies", user_movies_path(@user), class: "btn btn-outline-primary", method: :get %><br>
 
 <%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
 	<%= f.label :movie_title, "Movie Title" %>
 	<%= f.text_field :movie_title %> 
-  <%= f.submit "Search" %>
+  <%= f.submit "Search", class: "btn btn-success" %>
 <% end %>
