--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Viewing Party</h1>
 
-<%= button_to "Create New User", register_path, method: :get %>
+<%= button_to "Create New User", register_path, class: "btn btn-success", method: :get %>
 
  <body>
   <div class="row">
