--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
 
   <p>
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.email_field :email  %>
   </p>
   <%= form.submit "Create New User" %>
 <% end %>
