--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -1,8 +1,9 @@
 <h3><%= @movie[:title] %></h3>
 <%= form_with model: [ :user, :movie, @party ], method: :post, local: true do |f| %>
-	<p><%= f.hidden_field :movie_id, value: @movie[:movie_id] %></p>
 	<p><%= f.hidden_field :image_path, value: @movie[:image_path] %></p>
 	<p><%= f.hidden_field :title, value: @movie[:title] %></p>
+	<p><%= f.hidden_field :runtime, value: @movie[:runtime] %></p>
+	<p><%= f.hidden_field :movie_id, value: @movie[:movie_id] %></p>
 	<p><%= f.label :duration, "Duration" %></p>
 	<p><%= f.number_field :duration, value: @movie[:runtime] %></p>
 	<p><%= f.label :date, "Date" %></p>
