feat: update view css styling
Co-authored-by: James Taylor <jrtaylor0614@gmail.com>

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,10 @@
-<p><%= button_to "Create new user", register_path, method: :get %></p>
+<center>
+  <p><%= button_to "Create new user", register_path, method: :get %></p>
 
-<h2>Existing Users</h2>
-<div id="existing_users">
-  <% @users.each do |user| %>
-    <p><%=link_to user.email, user_path(user)%></p>
-  <%end%>
-</div>
+  <h2>Existing Users</h2>
+  <div id="existing_users">
+    <% @users.each do |user| %>
+      <p><%=link_to user.email, user_path(user)%></p>
+    <%end%>
+  </div>
+</center>
