--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,37 +1,39 @@
-<h2>Create a Movie Party for <%= @movie_facade.movie.title %></h2>
-<p><%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %></p>
+<center>
+  <h2>Create a Movie Party for <%= @movie_facade.movie.title %></h2>
+  <p><%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %></p>
 
-<div id="party_details">
-  <h4>Viewing Party Details</h4>
-  <p>Movie Title &emsp; <%= @movie_facade.movie.title %></p>
-  <%= form_with url: user_movie_viewing_parties_path(@user, @movie_facade.movie.id), method: :post, local: true do |form| %>
-    <p>
-      <%= form.label :duration_minutes, "Duration of Party" %>
-      <%= form.text_field :duration_minutes, value: @movie_facade.movie.runtime %>
-    </p>
+  <div class="viewing_party_container", id="party_details">
+    <h4>Viewing Party Details</h4>
+    <p>Movie Title &emsp; <%= @movie_facade.movie.title %></p>
+    <%= form_with url: user_movie_viewing_parties_path(@user, @movie_facade.movie.id), method: :post, local: true do |form| %>
+      <p>
+        <%= form.label :duration_minutes, "Duration of Party" %>
+        <%= form.text_field :duration_minutes, value: @movie_facade.movie.runtime %>
+      </p>
 
-    <p>
-      <%= form.label :party_date, "Day" %>
-      <%= form.date_field :party_date %>
-    </p>
+      <p>
+        <%= form.label :party_date, "Day" %>
+        <%= form.date_field :party_date %>
+      </p>
 
-    <p>
-      <%= form.label :party_time, "Start Time" %>
-      <%= form.time_field :party_time %>
-    </p>
+      <p>
+        <%= form.label :party_time, "Start Time" %>
+        <%= form.time_field :party_time %>
+      </p>
 
-    <p>Invite Other Users</p>
-    <div id="invite_users">
-      <% @users.reject { |user| user.id == @user.id }.each do |user| %>
-        <div id="user-<%= user.id %>">
-          <%= form.check_box "users[#{user.id}]" %>
-          <%= form.label "users[#{user.id}]", "#{user.name} (#{user.email})" %>
-        </div>
-      <% end %>
-    </div>
+      <p>Invite Other Users</p>
+      <div id="invite_users">
+        <% @users.reject { |user| user.id == @user.id }.each do |user| %>
+          <div id="user-<%= user.id %>">
+            <%= form.check_box "users[#{user.id}]" %>
+            <%= form.label "users[#{user.id}]", "#{user.name} (#{user.email})" %>
+          </div>
+        <% end %>
+      </div>
 
-    <%= form.hidden_field :host_id, value: @user.id %>
-    
-    <%= form.submit "Create Party" %>
-  <% end %>
-</div>
+      <%= form.hidden_field :host_id, value: @user.id %>
+      
+      <%= form.submit "Create Party" %>
+    <% end %>
+  </div>
+</center>
