--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,15 +13,35 @@
  *= require_tree .
  *= require_self
  */
+ .main_container {
+
+ }
+
 .view_parties_container{
 
   border-top: 5px solid #2d3f1f;
 
 }
+
 .viewing_party_container {
   padding: 10px;
   margin: 10px;
   border-radius: 25px;
   border: 5px solid #2d3f1f;
   display: inline-block;
+}
+
+.movie_container {
+  /* border: 10px;
+  border-style: solid; */
+  /* margin: auto; */
+  width: 50%;
+  padding: 10px;
+  justify-content: space-around;
+  display: flex;
+}
+
+.movie_main_container {
+  padding-left: 15%;
+  display: flex;
 }
