--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,7 +1,10 @@
-<p><%= button_to "Find Top Rated Movies", user_movies_path(@user), method: :get, params: {q:  "top rated" } %></p>
-<p>
-  <%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
-    <%= form.text_field :q %>
-    <%= form.submit "Find Movies" %>
-  <% end %>
-</p>
+<center>
+  <h4>Discover Movies</h4>
+  <p><%= button_to "Find Top Rated Movies", user_movies_path(@user), method: :get, params: {q:  "top rated" } %></p>
+  <p>
+    <%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
+      <%= form.text_field :q %>
+      <%= form.submit "Find Movies" %>
+    <% end %>
+  </p>
+<center>
