--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     <% end %>
     
     <p><%= link_to "Home", root_path %></p>
-    <p>Welcome to Viewing Party!</p>
-    <%= yield %>
+    <div class="main_container">
+      <center><h1>Viewing Party</h1></center>
+      <%= yield %>
+    </div>
   </body>
 </html>
