--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,26 @@
 
 <section id = "viewing_parties">
   <h4>Viewing Parties</h4>
+  <% @user_viewing_parties.each do |party| %>
+    <div id = "party-<%= party.id %>">
+      <p><%= image_tag "https://image.tmdb.org/t/p/original#{@movie_facade.find_movie(party.movie_id).poster_path}", height: '100', width: '80' %></p>
+      <p><%= link_to @movie_facade.find_movie(party.movie_id).title, "/users/#{@user.id}/movies/#{party.movie_id}" %></p>
+      <p>Date: <%= party.day.strftime('%B %d, %Y') %></p>
+      <p>Time: <%= party.time.strftime('%I:%M %p')%></p>
+      <p>Host: <b><%= party.host.name %></b></p>
+
+      <p>Guests:</p>
+      <ul id = "guests">
+        <% party.guests.each do |guest| %>
+          <% if guest.id == @user.id %>
+            <li><b><%= guest.name %></b></li>
+          <% else %>
+            <li><%= guest.name %></li>
+          <% end %>
+        <% end %>
+      </ul>
+      <b><p>----------------------------------------</p></b>
+      <br>
+    </div>
+  <% end %>
 </section>
