CO-AUTHORED-BY: HR <hwryan12@gmail.com> Add sad path for viewing party creation

--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -16,6 +16,7 @@
   <p><%= form.hidden_field :movie_id, value: @facade.movie_details.id %></p>
   <p><%= form.hidden_field :movie_title, value: @facade.movie_details.title %></p>
   <p><%= form.hidden_field :movie_poster, value: @facade.movie_details.poster %></p>
+  <p><%= form.hidden_field :movie_runtime, value: @facade.movie_details.runtime %></p>
 
   <p><%= form.submit "Create Party" %></p>
 <% end %>
