--- a/app/views/movies/_search.html.erb
+++ b/app/views/movies/_search.html.erb
@@ -1,6 +1,6 @@
 <h1>Movie Search Results</h2>
 <p>Showing <%=facade.search_results.count%> Results</p>
-<%=button_to "Return to Discover Page", user_movies_discover_path(facade.user)%>
+<%=button_to "Return to Discover Page", user_movies_discover_path(facade.user), method: :get%>
 <%@n=0%>
 <%facade.search_results.each do |movie|%>
   <div id="movie-<%=movie.id%>">
