refactor: update styling

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,16 @@
-<h2>Register a New User</h2>
+<center>
+  <h2>Register a New User</h2>
 
-<%= form_with model: @user, method: :post, local: true do |form| %>
-  <p>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </p>
+  <%= form_with model: @user, method: :post, local: true do |form| %>
+    <p>
+      <%= form.label :name %>
+      <%= form.text_field :name %>
+    </p>
 
-  <p>
-    <%= form.label :email %>
-    <%= form.email_field :email  %>
-  </p>
-  <%= form.submit "Create New User" %>
-<% end %>
+    <p>
+      <%= form.label :email %>
+      <%= form.email_field :email  %>
+    </p>
+    <%= form.submit "Create New User" %>
+  <% end %>
+</center>
