--- a/app/views/users/viewing_parties/new.html.erb
+++ b/app/views/users/viewing_parties/new.html.erb
@@ -1,32 +1,39 @@
-<center><h3> Create a Movie Party for <%= "#{@movie.title}" %> </h3></center>
+<center><h3> Create a Movie Party for: <%= "#{@movie.title}" %> </h3></center>
 <center><%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %></center>
 
 <body>
   <center><table>
-    <%= form_with url: "/users/#{@user.id}/movies/#{@movie.movie_id}/viewing_parties/new", method: :post, local: true do |f| %>
-    <tr>
-        <center><td> <%= f.label :header, "Viewing Party Details" %></td></center>
-    </tr>
-    <tr>
-      <center><td> <%= f.label :movie_title, "Movie Title: #{@movie.title}"  %> </td></center>
-    </tr>
-    <tr>
-      <td> <%= f.label :duration, "Duration of Party" %> </td>
-      <td> <%= f.number_field :duration, value: @movie.runtime %> </td>
-    </tr>
-    <tr>
-      <td> <%= f.label :day, "Day" %> </td>
-      <td> <%= f.date_field :date, min: Date.today %> </td>
-    </tr>
-    <tr>
-      <td> <%= f.label :time, "Start Time" %> </td>
-      <td> <%= f.time_field :start_time, min: Time.now.strftime("%H:%M") %> </td>
-    </tr>
-        <%= f.hidden_field :host_id, value: "#{@user.id}" %>
-        <%= f.hidden_field :movie_id, value: "#{@movie.movie_id}" %>
-        <%= f.hidden_field :image, value: "#{@movie.image}" %>
+    <%= form_with url: "/users/#{@user.id}/movies/#{@movie.movie_id}/viewing_parties", method: :post, local: true do |f| %>
+      <tr>
+          <center><td> <%= f.label :header, "Viewing Party Details" %></td></center>
+      </tr>
+      <br>
+      <tr>
+        <td> <%= f.label :duration, "Duration of Party" %> </td>
+        <td> <%= f.number_field :duration, min: @movie.runtime, value: @movie.runtime %> </td>
+      </tr>
+      <tr>
+        <td> <%= f.label :date, "Day" %> </td>
+        <td> <%= f.date_field :date, min: Date.today %> </td>
+      </tr>
+      <tr>
+        <td> <%= f.label :start_time, "Start Time" %> </td>
+        <td> <%= f.time_field :start_time, min: Time.now.strftime("%H:%M") %> </td>
+      </tr>
+      <br>
+      
+      <td><p>"Invite Other Users"</p></td>
+        <% @users.reject{ |user| user.id == @user.id }.each do |user| %>
+        <tr>
+          <td><%= f.check_box :invitees %></tr>
+          <td><%= f.label :invitees, "#{user.name}" %></tr>
+        </tr>
+        <% end %>
+      <br>
+      <%= f.hidden_field :host_id, value: @user.id %>
+      <%= f.hidden_field :movie_id, value: @movie.movie_id %>
+      <%= f.hidden_field :image, value: @movie.image %>
       <td><%= f.submit "Create Party" %></td>
-    <% end %></td>
-    </tr>
+    <% end %>
   </table> </center>
 </body>
